fix: left-align text in card

--- a/assets/css/_card.scss
+++ b/assets/css/_card.scss
@@ -17,6 +17,10 @@
   &:focus {
     background-color: $color-kiwi-100;
   }
+
+  button {
+    text-align: start;
+  }
 }
 
 .m-card--clickable {
